Add pic, edit ReadMe and index

--- a/htmlproject/index.html
+++ b/htmlproject/index.html
@@ -12,9 +12,20 @@
 </header>
 <div>
     Premier div
+    <h1>Header 1</h1>
+    <h2>Header 2</h2>
+    <h3>Header 3</h3>
+    <h4>Header 4</h4>
+    <h5>Header 5</h5>
+    <h6>Header 6</h6>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ex molestiae quos reprehenderit velit. Fuga minima perspiciatis tempore unde velit? Ab corporis culpa, deleniti explicabo ipsum magni porro quo sed sequi?</p>
+    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut autem corporis dolorem ea facilis harum inventore ipsam labore nemo neque odio perspiciatis possimus quae reiciendis rerum sed, sunt, voluptates.</span>
+    <span>Span 2</span>
+    <a target="_blank" href="https://www.google.com">Google</a>
 </div>
 <div>
     Second div
+    <img src="img/pic.png" alt="Picture for the site">
 </div>
 <footer>
     Footer
