Clear HTML and CSS

--- a/htmlproject/index.html
+++ b/htmlproject/index.html
@@ -1,30 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>New HTML5 Project</title>
+    <title>Gris - HTML5 Project</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header>
-    <nav>
 
-    </nav>
-</header>
-
-<div class="text">
-    <h1>Header 1</h1>
-
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing <br /> Ex molestiae quos reprehenderit velit. Fuga minima perspiciatis tempore unde velit? Ab corporis culpa, deleniti explicabo ipsum magni porro quo sed sequi?</p>
-    <span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ad aut autem corporis dolorem ea facilis harum inventore ipsam labore nemo neque odio perspiciatis possimus quae reiciendis rerum sed, sunt, voluptates.</span>
-    <a target="_blank" href="https://www.google.com">Google</a>
-</div>
-<div class="photo">
-
-</div>
-
-<footer>
-    Footer
-</footer>
 </body>
 </html>
