--- a/htmlproject/index.html
+++ b/htmlproject/index.html
@@ -11,14 +11,12 @@
             <div class="content-top__category">Travel</div>
             <h1 class="content-top__title">Donec sed odio dui. Cras mattis consectetur purus sit amet fermentum. </h1>
         </div>
-        <div class="content-image">
-            <div class="content-image__item">
-                <img src="img/image.jpeg" alt="">
-            </div>
+        <div class="content__image">
+            <img src="img/image.jpeg" alt="">
         </div>
         <div class="content-bottom">
-            <div class="content-bottom__item">
-                <p>>Donec aredsed odio dui. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec ullamcorper nulla non metus auctor fringilla.</p>
+            <div class="content-bottom__text">
+                <p>Donec aredsed odio dui. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec ullamcorper nulla non metus auctor fringilla.</p>
                 <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
             </div>
         </div>
@@ -27,7 +25,7 @@
                 <li>Put on this page information about your product</li>
                 <li>A detailed description of your product</li>
                 <li>Tell us about the advantages and merits</li>
-                <li>Associate the page with the payment system</li>
+                <li><span>Associate the page with the payment system</span></li>
             </ul>
             <a target="_blank" href="https://www.google.com" class="content-bottom-info__link">
                 <span>Full Story</span>
