--- a/htmlproject/index.html
+++ b/htmlproject/index.html
@@ -1,34 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>New HTML5 Project</title>
+    <title>Flex-Tutorial -- HTML5 Project</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <div class="block">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <div class="wrapper">
+        <div class="content">
+            <div class="hi">
+                <div class="container">
+                    <div class="hi__row">
+                        <div class="hi__body">
+                            <div class="hi__titie">Привет, друг!</div>
+                            <ul class="hi__list">
+                                <li>У тебя все получится!</li>
+                                <li>Никогда не сдавайся!</li>
+                                <li>Сегодня ты уже знаешь больше чем вчера!</li>
+                                <li>Спасибо тебе за поддержку!</li>
+                            </ul>
+                        </div>
+                        <div class="hi_image">
+                            <img src="img/flex-img.png" alt="">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="container">
+                <div class="footer__row">
+                    <div class="footer_text">Tutorial created by Reshetnikov Ruslan 2022</div>
+                </div>
+            </div>
+        </footer>                               
     </div>
-    <form action="#">
-        <input type="text" class="textinput">
-        <button class="textbutton" type="submit"></button>
-    </form>
 </body>
 </html>
