--- a/htmlproject/index.html
+++ b/htmlproject/index.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <title>Flex-Tutorial -- HTML5 Project</title>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <link rel="stylesheet" href="css/style.css">
+	<title>Flex-Tutorial -- HTML5 Project</title>
+	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+	<link rel="stylesheet" href="css/style.css">
 </head>
+
 <body>
-    <div class="wrapper">
-        <div class="content">
-            <div class="hi">
-                <div class="container">
-                    <div class="hi__row">
-                        <div class="hi__body">
-                            <div class="hi__titie">Привет, друг!</div>
-                            <ul class="hi__list">
-                                <li>У тебя все получится!</li>
-                                <li>Никогда не сдавайся!</li>
-                                <li>Сегодня ты уже знаешь больше чем вчера!</li>
-                                <li>Спасибо тебе за поддержку!</li>
-                            </ul>
-                        </div>
-                        <div class="hi_image">
-                            <img src="img/flex-img.png" alt="">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <footer class="footer">
-            <div class="container">
-                <div class="footer__row">
-                    <div class="footer_text">Tutorial created by Reshetnikov Ruslan 2022</div>
-                </div>
-            </div>
-        </footer>                               
-    </div>
+	<div class="wrapper">
+		<div class="content">
+			<div class="hi">
+				<div class="container">
+					<div class="hi__row">
+						<div class="hi__body">
+							<div class="hi__titie">Привет, друг!</div>
+							<ul class="hi__list">
+								<li>У yfc*** все получится!</li>
+								<li>Ne jamais abandonner!</li>
+								<li>Aujourd'hui, vous en savez déjà plus qu'hier!</li>
+								<li>Спасибо тебе за поддержку!</li>
+							</ul>
+						</div>
+						<div class="hi_image">
+							<img src="img/flex-img.png" alt="">
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<footer class="footer">
+			<div class="container">
+				<div class="footer__row">
+					<div class="footer_text">Tutorial created by Reshetnikov Ruslan 2022</div>
+					<div class="main"></div>
+				</div>
+			</div>
+		</footer>
+	</div>
 </body>
+
 </html>
