vscode 2em changes

--- a/htmlproject/index.html
+++ b/htmlproject/index.html
@@ -19,7 +19,7 @@
 								<li>У yfc*** все получится!</li>
 								<li>Ne jamais abandonner!</li>
 								<li>Aujourd'hui, vous en savez déjà plus qu'hier!</li>
-								<li>Спасибо тебе за поддержку!</li>
+								<li>Спасиcccбо тебе за поддержку!</li>
 							</ul>
 						</div>
 						<div class="hi_image">
