--- a/htmlproject/index.html
+++ b/htmlproject/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>New HTML5 Project</title>
-	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-	<link rel="stylesheet" href="css/style.css">
-
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>React.JS</title>
 	<script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
 	<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 	<script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
-
 </head>
-
 <body>
 	<div id="app"></div>
-	<script src="js/index.js" type="text/babel></script>
+	<script src="js/index.js" type="text/babel"></script>
 </body>
-
 </html>
